[metadata]
name = miyadaiku
version = attr: miyadaiku.__version__
url = https://miyadaiku.github.io
author = Atsuo Ishimoto
description = Miyadaiku - Flexible static site generator for Jinja2 artists
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Documentation = https://miyadaiku.github.io/
    Source = https://github.com/miyadaiku/miyadaiku

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
setup_requires = 
    setuptools-git
    importlib_resources
    tzlocal

install_requires =
    tzlocal
    docutils
    pyyaml
    jinja2
    python-dateutil
    pygments
    pytz
    tzlocal
    beautifulsoup4
    feedgenerator
    markdown>=3.0
    nbformat
    nbconvert
    watchdog
    ipython
    importlib_resources
    pyyaml
    importlib_resources

[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake

[options.entry_points]
console_scripts =
    miyadaiku-start = miyadaiku.scripts.zichinsai:main
    miyadaiku-build = miyadaiku.scripts.muneage:main


[options.package_data]
* =
    *.rst
    *.md
    *.html
    *.css
    *.js
    *.yml
    *.png
    *.jpg
    *.jpeg
    *.otf
    *.eot
    *.svg
    *.ttf
    *.woff
    *.woff2
